Bug 269097 - [PATCH] Some html entities are not correctly displayed in history
Summary: [PATCH] Some html entities are not correctly displayed in history
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: History Plugin (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources All
: NOR minor
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 279269 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-22 01:31 UTC by José Millán Soto
Modified: 2016-08-14 22:02 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.5
Sentry Crash Report:


Attachments
Proposed patch (749 bytes, patch)
2011-03-22 01:31 UTC, José Millán Soto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description José Millán Soto 2011-03-22 01:31:02 UTC
Created attachment 58236 [details]
Proposed patch

Version:           SVN (using Devel) 
OS:                All

Kopete history plugin does not handle correctly some characters which are html entities, such as ampersand and quot, displaying the html entity in its place.

Reproducible: Didn't try

Steps to Reproduce:
Open a new conversation and write the text which is bewteen simple quotes: '" &', then open the conversation history.

Actual Results:  
The converation history contains: " &

Expected Results:  
The converation history should contain: " &
Comment 1 Andrew 2011-07-02 12:22:27 UTC
I have this too. Kopete 1.0.80, KDE 4.6.3 from fedora repo.
After reopening log window '>' is shown as '>' and so on.
Comment 2 Pali Rohár 2012-12-08 22:27:13 UTC
SVN commit 1327789 by pali:

History plugin - Fixed saving and reading plain text messages



 M  +4 -20     historylogger.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1327789
Comment 3 Pali Rohár 2012-12-08 22:41:02 UTC
SVN commit 1327790 by pali:

Backport r1327789 to 4.9 branch:

History plugin - Fixed saving and reading plain text messages




 M  +4 -20     historylogger.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1327790
Comment 4 Pali Rohár 2016-08-14 22:02:49 UTC
*** Bug 279269 has been marked as a duplicate of this bug. ***