History plugin - Fixed saving and reading plain text messages

BUG: 269097

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1327789